# uHID-bootloader-avr

./: .config  .gitmodules  CMakeLists.txt  Makefile  README.md  config_nrfdongle  kcnf
cmake/: common.cmake  lufa.cmake  toolchain.cmake  vusb.cmake
configs/: config-nrfdongle-16M  config-uisp-12Mhz  config-uisp-16Mhz  config-uisp-20Mhz
devices/: attiny85.cmake  powerhub.cmake  skeleton-key-m328p.cmake  skeleton-key-m8-ci.cmake  skeleton-key-m8.cmake  skeleton-key.cmake
include/: uhid.h  usbconfig-base.h  usbconfig.h
prebuilt/: nrfdongle-bootloader-16000000.hex  uisp-r2-12000000Hz.hex  uisp-r2-16000000Hz.hex  uisp-r2-20000000Hz.hex  uisp-r2-loader.hex
src/: .directory  Descriptors.c  Descriptors.h  Makefile  bootlogic.c  descriptors-lufa.c  main-lufa.c  main-vusb.c  main.c  uisp-loader.c  uisp.h
